--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,8 @@ node_modules
 Thumbs.db
 
 # Env
-# comit.js
-# .env
+comit.js
+.env
 # .env.*
 # !.env.example
 # !.env.test
@@ -23,3 +23,6 @@ Thumbs.db
 # Vite
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+#/src/generated/prisma
+.db
