--- a/package.json
+++ b/package.json
@@ -1,34 +1,26 @@
 {
-    "name": "restorant-nm",
-    "private": true,
-    "version": "0.0.1",
-    "type": "module",
-    "scripts": {
-        "dev": "vite dev",
-        "build": "vite build",
-        "preview": "vite preview",
-        "prepare": "svelte-kit sync || echo ''"
-    },
-    "devDependencies": {
-        "@sveltejs/adapter-auto": "^6.0.0",
-        "@sveltejs/adapter-static": "^3.0.8",
-        "@sveltejs/kit": "^2.16.0",
-        "@sveltejs/vite-plugin-svelte": "^5.0.0",
-        "daisyui": "^5.0.46",
-        "flowbite": "^3.1.2",
-        "flowbite-svelte": "^1.13.4",
-        "svelte": "^5.0.0",
-        "svelte-preprocess": "^6.0.3",
-        "vite": "^6.2.6"
-    },
-    "dependencies": {
-        "@lucide/svelte": "^0.525.0",
-        "@tailwindcss/vite": "^4.1.11",
-        "chokidar": "^4.0.3",
-        "lightweight-charts": "^4.2.3",
-        "sharp": "^0.34.3",
-        "simple-git": "^3.28.0",
-        "svelte-lightweight-charts": "^2.2.0",
-        "tailwindcss": "^4.1.11"
-    }
+	"name": "restorant-nm-v2",
+	"private": true,
+	"version": "0.0.1",
+	"type": "module",
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"prepare": "svelte-kit sync || echo ''"
+	},
+	"devDependencies": {
+		"@sveltejs/adapter-auto": "^6.1.0",
+		"@sveltejs/kit": "^2.43.2",
+		"@sveltejs/vite-plugin-svelte": "^6.2.0",
+		"flowbite": "^3.1.2",
+		"flowbite-svelte": "^1.17.4",
+		"flowbite-svelte-icons": "^3.0.0",
+		"svelte": "^5.39.5",
+		"vite": "^7.1.7"
+	},
+	"dependencies": {
+		"@tailwindcss/vite": "^4.1.14",
+		"tailwindcss": "^4.1.14"
+	}
 }
